Fix notification indicator icon too big after font update

--- a/eww.scss
+++ b/eww.scss
@@ -250,7 +250,7 @@ $themes: (
 }
 
 .notifications-indicator {
-  font-size: 2em;
+  font-size: 1.2em;
 }
 
 .notification-list {
